syntax = "proto3";

option java_package = "org.opensourceframework.user.grpc.lib";
service Greeter {
    rpc SayHello ( HelloRequest) returns (  HelloReply) {}

}
message HelloRequest {
    string name = 1;
}
message HelloReply {
    string message = 1;
}


